# off_road_traversability_mapping

./: LICENSE  README.md
src/: CMakeLists.txt  package.xml
src/config/: custom_occ_map.rviz
src/include/costmap_pub/: customCostmap.h
src/launch/: nail_Costmap_launch.py
src/src/: customCostmap.cpp  customScan.cpp
